==================================
Rilascio v2.0.30    del 29/03/2018
==================================

ryVlad: corretti errori di sintassi nelle espressioni regolari

Aggiunto il massimo di record estratti in manutenzione movimenti

Pluto: calcolo dell'NPV modificato

==================================
Rilascio v2.0.29    del 05/03/2018
==================================

ryFamily: corretto un'anomalia introdotta nella verisone v2.0.28

==================================
Rilascio v2.0.28    del 24/12/2017
==================================

ryFamily: corretto il malfuzionamento nell'espandere/collassare un nodo in caso di zoom inferiore al 100%.

==================================
Rilascio v2.0.27    del 23/12/2017
==================================

Utilizzato __construct come costruttore di classe nei PHP.

==================================
Rilascio v2.0.26    del 05/09/2017
==================================

ryFamily: applicato lo stile in addfolder e additem.

==================================
Rilascio v2.0.25    del 02/09/2017
==================================

ryCheck: cambio di font per ovviare alle scelte non standard di Microsoft Edge per quanto riguarda i caratteri utf8 grafici.

==================================
Rilascio v2.0.24    del 02/09/2017
==================================

ryFrame: effettuati miglioramenti grafici.

ryQue: corretta la gestione dei tentativi.

ryFamily: corretto il refresh di posizionamento e ridimensionamento.

==================================
Rilascio v2.0.23    del 23/07/2017
==================================

Aggiunta la nuova libreria ryframe che contiene cornici e quadranti.

Migliorata la gestione dell'evento changed.

==================================
Rilascio v2.0.22    del 16/07/2017
==================================

ryText: corretto errore nella timerize.

==================================
Rilascio v2.0.21    del 16/07/2017
==================================
